--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -1,43 +1,38 @@
-<!-- Front page for Giftbook -->
 <!DOCTYPE HTML>
 <html>
 <head>
 	<title>MainPage</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
-	<link href="../bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="../stylesheets/main.css">
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script type="text/javascript">
+	
+    </script>
 </head>
 <body>
-	<span id="signinButton">
-		<span
-		class="g-signin"
-		data-callback="signinCallback"
-		data-clientid="261144481778-2rppbrlfrr1uhkv6t1f0d27s7n2334rh.apps.googleusercontent.com"
-		data-cookiepolicy="single_host_origin"
-		data-requestvisibleactions="http://schemas.google.com/AddActivity"
-		data-scope="https://www.googleapis.com/auth/plus.login">
-	</span>
-</span>
-<script type="text/javascript">
-(function() {
-	var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-	po.src = 'https://apis.google.com/js/client:plusone.js';
-	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-})();
-
-function signinCallback(authResult) {
-  if (authResult['status']['signed_in']) {
-   	location.reload();
-  } else {
-    // Update the app to reflect a signed out user
-    // Possible error values:
-    //   "user_signed_out" - User is signed-out
-    //   "access_denied" - User denied access to your app
-    //   "immediate_failed" - Could not automatically log in the user
-    console.log('Sign-in state: ' + authResult['error']);
-  }
-}
-</script>
+	<div class="span4 offset8 signin-align">
+		<div id="greetings">
+			Welcome to PinnerSpace!
+		</div>
+		<span id="signinButton">
+			<span
+			class="g-signin"
+			data-callback="signinCallback"
+			data-clientid="261144481778-2rppbrlfrr1uhkv6t1f0d27s7n2334rh.apps.googleusercontent.com"
+			data-cookiepolicy="single_host_origin"
+			data-requestvisibleactions="http://schemas.google.com/AddActivity"
+			data-scope="https://www.googleapis.com/auth/plus.login"></span>
+		</span>
+	</div>
+	<script type="text/javascript">
+	(function() {
+		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		po.src = 'https://apis.google.com/js/client:plusone.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+	})();
+	function signinCallback(authResult) {
+		if (authResult['status']['signed_in']) {
+			document.location.href = '/board';
+		};
+    }
+	</script>
 </body>
 </html>
