--- a/www/index.html
+++ b/www/index.html
@@ -1,10 +1,34 @@
 <html>
 <head>
-	<title>Welcome back!</title>
+	<title>PinnerSpace Home</title>
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="bootstrap.min.css">
 </head>
-<body>
-	<div class="span4 offset8 signin-align">
-		<span> Welcome back {{ user_mail }}! <a href="{{ logout }}">logout</a></span>
+<body onload="init()">
+	<div id="header">
+		<div class="jumbotron">
+			<div class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
+				<span> Welcome back {{ user_mail }}! <a href="{{ logout }}">logout</a></span>
+			</div>
+			<h2 class="title" style="text-align: center">Welcome to PinnerSpace</h2>
+			<ul class="nav nav-pills pull-left">
+				<li><a href="./index">Home</a></li> <!--stubs-->
+				<li><a href="./boards">Boards</a></li>
+				<li><a href="./settings">Settings</a></li>
+			</ul>
+		</div>
+	</div>
+	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
+		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
+			This text is displayed if your browser does not support HTML5 Canvas.
+		</canvas>
+
+		<div style="font-family: Verdana; font-size: 12px;">
+			<p>Click to select. Double click to create a new Shape.</p>
+		</div>
+
+		<script src="shapes.js"></script>
+
 	</div>
 </body>
 </html>
