--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
 		})();
 	</script>
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
+		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
 		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
 			This text is displayed if your browser does not support HTML5 Canvas.
 		</canvas>
@@ -38,7 +39,7 @@
 			<p>Click to select. Double click to create a new Shape.</p>
 		</div>
 
-		<script src="shapes.js"></script>
+		<script src="./shapes.js"></script>
 	</div>
 </body>
 </html>
