--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,9 @@
 <head>
 	<title>PinnerSpace Home</title>
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="bootstrap.min.css">
 
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script type="text/javascript">	</script>
+	<script src="../scripts/shapes.js" type="text/javascript"></script>
 </head>
 <body onload="init()">
 	<div id="header">
@@ -22,13 +21,7 @@
 			</ul>
 		</div>
 	</div>
-	<script type="text/javascript">
-		(function() {
-			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			po.src = 'https://apis.google.com/js/client:plusone.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		})();
-	</script>
+	
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
 			This text is displayed if your browser does not support HTML5 Canvas.
@@ -37,8 +30,13 @@
 		<div style="font-family: Verdana; font-size: 12px;">
 			<p>Click to select. Double click to create a new Shape.</p>
 		</div>
-
-		<script src="shapes.js"></script>
+		<script type="text/javascript">
+		(function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/client:plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		})();
+	</script>
 	</div>
 </body>
 </html>
