--- a/www/index.html
+++ b/www/index.html
@@ -3,21 +3,31 @@
 <head>
 	<title>PinnerSpace Home</title>
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script src="../scripts/shapes.js" type="text/javascript"></script>
+	<!--Google Login Script-->
+	<script type="text/javascript">
+		(function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/client:plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		})();
+	</script>
+	<!--End of Google Login Script-->
 </head>
 <body onload="init()">
 	<div id="header">
 		<div class="jumbotron">
-			<div class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
-				<span> Welcome back {{ user_mail }}! <a href="{{ logout }}">logout</a></span>
-			</div>
-			<h2 class="title" style="text-align: center">Welcome to PinnerSpace</h2>
-			<ul class="nav nav-pills pull-left">
+			<h2 class="title" style="text-align: center">PinnerSpace</h2>
+			
+			<ul class="nav nav-pills pull-left clearfix">
 				<li><a href="./index">Home</a></li> <!--stubs-->
 				<li><a href="./boards">Boards</a></li>
 				<li><a href="./settings">Settings</a></li>
+			</ul>
+			<ul class="nav nav-pills pull-right"> <!--class="span4 offset8 signin-align"-->
+				<li class="disabled"><a>Welcome back <b>{{ user_nick }}</b>!</a></li>
+				<li><a href="{{ logout }}">Logout</a></li>
 			</ul>
 		</div>
 	</div>
@@ -31,15 +41,6 @@
 		<div style="font-family: Verdana; font-size: 12px;">
 			<p>Click to select. Double click to create a new Shape.</p>
 		</div>
-		<script type="text/javascript">
-		(function() {
-			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			po.src = 'https://apis.google.com/js/client:plusone.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		})();
-	</script>
-
-		<script src="./shapes.js"></script>
 	</div>
 </body>
 </html>
