--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -1,27 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>MainPage</title>
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	
-    </script>
-</head>
-<body>
-	<div class="span4 offset8 signin-align">
-		<div id="greetings">
-			Welcome to PinnerSpace!
-		</div>
-		<span id="signinButton">
-			<span
-			class="g-signin"
-			data-callback="signinCallback"
-			data-clientid="261144481778-2rppbrlfrr1uhkv6t1f0d27s7n2334rh.apps.googleusercontent.com"
-			data-cookiepolicy="single_host_origin"
-			data-requestvisibleactions="http://schemas.google.com/AddActivity"
-			data-scope="https://www.googleapis.com/auth/plus.login"></span>
-		</span>
-	</div>
+	<title>PinnerSpace - Virtual Pinboard</title>
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../stylesheets/mainpage.css">
+	<!--Google Login Script-->
 	<script type="text/javascript">
 	(function() {
 		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
@@ -34,5 +17,20 @@
 		};
     }
 	</script>
+	<!--End of Google Login Script-->
+</head>
+<body>
+	<div class="jumbotron" align="center">
+		<h2 class="title">PinnerSpace</h2>
+		<p id="signinButton">
+			<span
+			class="g-signin"
+			data-callback="signinCallback"
+			data-clientid="261144481778-2rppbrlfrr1uhkv6t1f0d27s7n2334rh.apps.googleusercontent.com"
+			data-cookiepolicy="single_host_origin"
+			data-requestvisibleactions="http://schemas.google.com/AddActivity"
+			data-scope="https://www.googleapis.com/auth/plus.login"></span>
+		</p>
+	</div>
 </body>
 </html>
