--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>PinnerSpace - Virtual Pinboard</title>
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="../stylesheets/mainpage.css">
 	<!--Google Login Script-->
 	<script type="text/javascript">
