No significant change
minor comments and testing (reverted code to original for syncing but
kept comments)

--- a/www/index.html
+++ b/www/index.html
@@ -31,9 +31,9 @@
 			</ul>
 		</div>
 	</div>
-	
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
+		<!--is it possible to make a stretchable canvas?-->
 		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
 			This text is displayed if your browser does not support HTML5 Canvas.
 		</canvas>
