Fixed an issue with the first login.

--- a/www/setting.html
+++ b/www/setting.html
@@ -35,7 +35,7 @@
 	<!--BODY-->
 	<div align="center">
 		<form name="input" action="./update" method="post">
-			New name: <input type="text" name="newnickname"  value="{{ newnickname }}">
+			Change display name: <input type="text" name="newnickname"  value="{{ user_nick }}">
 			<input type="submit" value="Submit">
 		</form>
 	</div>
