Some board features added
-Board Creation
-Board Display
-Color change to .css
-Added Comments

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
 		</div>
 	</div>
 	
+	<!--BODY-->
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
 		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
@@ -42,5 +43,6 @@
 			<p>Click to select. Double click to create a new Shape.</p>
 		</div>
 	</div>
+	<!--END BODY-->
 </body>
 </html>
