--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -32,5 +32,8 @@
 			data-scope="https://www.googleapis.com/auth/plus.login"></span>
 		</p>
 	</div>
+
+	<!--BODY-->
+	<!--END BODY-->
 </body>
 </html>
