--- a/www/boards.html
+++ b/www/boards.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>PinnerSpace - Settings</title>
+	<title>PinnerSpace - My Boards</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	<script src="../scripts/shapes.js" type="text/javascript"></script>
 	<!--Google Login Script-->
 	<script type="text/javascript">
-		(function() {
-			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			po.src = 'https://apis.google.com/js/client:plusone.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		})();
+	(function() {
+		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		po.src = 'https://apis.google.com/js/client:plusone.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+	})();
 	</script>
 	<!--End of Google Login Script-->
 </head>
@@ -34,14 +34,18 @@
 	
 	<!--BODY-->
 	<div align="center">
-		<form name="input" action="./update" method="post">
-			Change display name: <input type="text" name="newnickname"  value="{{ user_nick }}">
-			<input type="submit" value="Submit">
+		<form name="input" action="./newBoard" method="post">
+			Board Name: <input type="text" name="boardName">
+			<input type="submit" value="Create new board">
 		</form>
-	</div>
-	<p><p>
-	<div id="status" align="center">
-		<b>{{ update_status }}</b> 
+		<p><p>
+		<table>
+			{% for board in boards %}
+			<tr>
+				<td>Board{{ board.boardID }}: {{ board.boardName }}</td>
+			</tr>
+			{% endfor %}
+		</table>
 	</div>
 	<!--END BODY-->
 </body>
