--- a/www/boards.html
+++ b/www/boards.html
@@ -39,6 +39,8 @@
 			<input type="submit" value="Create new board">
 		</form>
 		<p><p>
+		{{ error }}
+		<p><p>
 		<table>
 			{% for board in boards %}
 			<tr>
