--- a/www/index.html
+++ b/www/index.html
@@ -4,14 +4,16 @@
 	<title>PinnerSpace Home</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
 	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	<script src="../scripts/shapes.js" type="text/javascript"></script>
+	<script src="../scripts/fabric.js" type="text/javascript"></script>
+	<script src="../scripts/fabric.min.js" type="text/javascript"></script>
+	<script src="../scripts/fabric.require.js" type="text/javascript"></script>
 	<!--Google Login Script-->
 	<script type="text/javascript">
-		(function() {
-			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-			po.src = 'https://apis.google.com/js/client:plusone.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-		})();
+	(function() {
+		var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+		po.src = 'https://apis.google.com/js/client:plusone.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+	})();
 	</script>
 	<!--End of Google Login Script-->
 </head>
@@ -21,7 +23,7 @@
 			<h2 class="title" style="text-align: center">PinnerSpace</h2>
 			
 			<ul class="nav nav-pills pull-left clearfix">
-				<li><a href="./">Home</a></li> <!--stubs-->
+				<li><a href="./">Home</a></li>
 				<li><a href="./boards">Boards</a></li>
 				<li><a href="./settings">Settings</a></li>
 			</ul>
@@ -35,13 +37,23 @@
 	<!--BODY-->
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
-		<canvas id="canvas1" width="1000" height="500" style="border: 1px solid black; background: #FFDAB9;">
+		<canvas id="canvas" width="1000" height="500" style="border: 1px solid black;">
 			This text is displayed if your browser does not support HTML5 Canvas.
 		</canvas>
+		<script type = "text/javascript">
+		var canvas = new fabric.Canvas('canvas');
+		canvas.backgroundColor = 'black';
+		var rect = new fabric.Rect({
+			left: 100,
+			top: 100,
+			fill: 'red',
+			width: 20,
+			height: 20
+		});
 
-		<div style="font-family: Verdana; font-size: 12px;">
-			<p>Click to select. Double click to create a new Shape.</p>
-		</div>
+		// "add" rectangle onto canvas
+		canvas.add(rect);
+		</script>
 	</div>
 	<!--END BODY-->
 </body>
