--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,9 @@
 	</div>
 	
 	<!--BODY-->
+	<div id="boardInfo" align="center">
+		Board{{ boardID }} : {{ boardName }}  
+	</div>
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
 		<canvas id="canvas" width="1000" height="500" style="border: 1px solid black;">
