--- a/www/boards.html
+++ b/www/boards.html
@@ -3,7 +3,9 @@
 <head>
 	<title>PinnerSpace - My Boards</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="../scripts/shapes.js" type="text/javascript"></script>
 	<!--Google Login Script-->
 	<script type="text/javascript">
@@ -45,14 +47,14 @@
 			<input type="submit" value="Submit">
 		</form>
 		<p><p>
-		<table height="90em" width="300em">
+		<table width="300em">
 			{% for board in boards %}
 			<tr>
 				<form class="form-inline navbar-form" name="input" action="./deleteBoard" method="post">
 					<td valign="baseline"><button class="btn btn-default btn-xs glyphicon glyphicon-remove" name="boardID" type="submit" value={{ board.boardID }}></button></td>
-					<td valign="middle">Board{{ board.boardID }}: {{ board.boardName }}</td>
+					<td valign="baseline">Board{{ board.boardID }}: {{ board.boardName }}</td>
 				</form>
-				<td valign="middle">
+				<td valign="baseline">
 				{% if board.boardID == defaultBoardID %}
 				<span class="label label-primary">Default</span>
 				{% else %}
