--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,9 @@
 <head>
 	<title>PinnerSpace Home</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="../scripts/fabric.js" type="text/javascript"></script>
 	<!--Google Login Script-->
 	<script type="text/javascript">
@@ -40,8 +42,24 @@
 	
 	<!--BODY-->
 	<div id="boardInfo" align="center">
-		Board{{ boardID }} : {{ boardName }}  
+		Board{{ currBoard.boardID }}
 	</div>
+	<center>
+		<div class="btn-group">
+			<button class="disabled btn btn-primary">{{ currBoard.boardName }}</button>
+			{% if user.numBoards > 1 %}
+			<button data-toggle="dropdown" class="btn btn-primary dropdown-toggle"><span class="caret"></span></button>
+			<ul class="dropdown-menu">
+				{% for board in boards %}
+					{% if board.boardID != currBoard.boardID %}
+					<li><a href="./board?boardID={{ board.boardID }} ">{{ board.boardName }}</a></li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+			{% endif %}
+		</div>
+
+	
 	<div id="pinboard" style="width:1000px; height:500px; margin: 0 auto; padding: 5px">
 		<!--canvas id must be consistent with shapes.js for "add shapes" to work-->
 		<canvas id="canvas" width="1000" height="500" style="border: 1px solid black;">
