--- a/www/mainpage.html
+++ b/www/mainpage.html
@@ -3,6 +3,10 @@
 <head>
 	<title>PinnerSpace - Virtual Pinboard</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+		<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
 	<link type="text/css" rel="stylesheet" href="../stylesheets/mainpage.css">
 	<!--Google Login Script-->
 	<script type="text/javascript">
