--- a/www/setting.html
+++ b/www/setting.html
@@ -3,7 +3,9 @@
 <head>
 	<title>PinnerSpace - Settings</title>
 	<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<link rel="stylesheet" href="../bootstrap/css/bootstrap-theme.min.css">
+	<script src="../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="../scripts/shapes.js" type="text/javascript"></script>
 	<!--Google Login Script-->
 	<script type="text/javascript">
