Follow and Unfollow now updates user
- Properly updates when follow and unfollow
- Display followed boards under dropdown button
- Follow and Unfollow now updates accordingly.

--- a/www/boards.html
+++ b/www/boards.html
@@ -50,7 +50,7 @@
 		<table>
 			{% if targetMail != user.email and targetMail %}
 			<tr>Boards of {{ targetMail }}<tr>
-			{% else %}
+			{% elif targetMail %}
 			<tr>My Boards</tr>
 			{% endif %}
 			{% for board in boards %}
